--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:6Pib9IsiqMuTLDZMisPU9K6ncUBrkjNU635qOnpVuBs=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://test1.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=test1
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -28,13 +28,32 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# MAIL_MAILER=smtp
+# MAIL_HOST=mailhog
+# MAIL_PORT=1025
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
+# MAIL_ENCRYPTION=null
+# MAIL_FROM_ADDRESS=null
+# MAIL_FROM_NAME="${APP_NAME}"
+
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=e177ad614a0c8ec6yh
+# MAIL_PASSWORD=7946e45ac898a60w
+# MAIL_ENCRYPTION=tls
+# MAIL_FROM_ADDRESS=correo@gmail.com
+# MAIL_FROM_NAME="${APP_NAME}"
+
+
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.sendgrid.net
+MAIL_PORT=587
+MAIL_USERNAME=apikey
+MAIL_PASSWORD=SG.U46nZj2sStOVE1q0ruD1xzrteFg.Wwat2tL21s_azFxJrXyuzdtt7_oFllzZ444wSpKW3-L4
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=noreply@arling.pro
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -50,3 +69,4 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
